--- a/counter/Pages/Index.razor
+++ b/counter/Pages/Index.razor
@@ -3,4 +3,6 @@
 <PageTitle>Home</PageTitle>
 
 <h1>Home Page</h1>
+
 <p>Welcome to the page, use the nav to get a random Dinosaur, or view lots of dinosaurs!</p>
+<img src="dino.jpg" width="600px" />
