--- a/counter/Shared/NavMenu.razor
+++ b/counter/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="randomDino">
+                <span class="oi oi-plus" aria-hidden="true"></span> Lots of Dinos!
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
