--- a/counter/Shared/NavMenu.razor
+++ b/counter/Shared/NavMenu.razor
@@ -20,8 +20,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="randomDino">
-                <span class="oi oi-plus" aria-hidden="true"></span> Lots of Dinos!
+            <NavLink class="nav-link" href="allDinos">
+                <span class="oi oi-plus" aria-hidden="true"></span> All Dino's
             </NavLink>
         </div>
         <div class="nav-item px-3">
