Added all dinos page and code
Added the razor for All Dinos to display
Added the Nav button for all dinos
removed Nav for the ra

--- a/counter/Pages/Index.razor
+++ b/counter/Pages/Index.razor
@@ -6,3 +6,4 @@
 
 <p>Welcome to the page, use the nav to get a random Dinosaur, or view lots of dinosaurs!</p>
 <img src="dino.jpg" width="600px" />
+<p>Dinosaur facts taken from Dinosaur API (https://dinosaur-facts-api.shultzlab.com/)</p>
