--- a/counter/Pages/Dino.razor
+++ b/counter/Pages/Dino.razor
@@ -4,11 +4,11 @@
 @inject IHttpClientFactory ClientFactory
 
 <h1>Do you like Dinosaurs?</h1>
-<button class="btn btn-primary" @onclick="GetApiData">Get Random Dinosaur</button>
+<button class="btn btn-primary" style="margin-bottom:10px" @onclick="GetApiData">Get Random Dinosaur</button>
 
 @if (getDataError || apiData is null)
 {
-    <p>No Dinosaur Details</p>
+    <p>No Dinosaur Details, Yet, Perhaps if you pressed the button ^^^^</p>
 }
 else
 {
