--- a/counter/Shared/MainLayout.razor
+++ b/counter/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>counter</PageTitle>
+<PageTitle>Dino App</PageTitle>
 
 <div class="page">
     <div class="sidebar">
