--- a/counter/Shared/NavMenu.razor
+++ b/counter/Shared/NavMenu.razor
@@ -1,6 +1,9 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">counter</a>
+        
+
+        <a class="navbar-brand" href="">Dino App</a>
+        <img src="favicon.png" width="40px" />
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -11,29 +14,20 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <img src="favicon.png" width="40px" />Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="randomDino">
-                <span class="oi oi-plus" aria-hidden="true"></span> Random Dino
+                <img src="favicon.png" width="40px" /> Random Dino
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="allDinos">
-                <span class="oi oi-plus" aria-hidden="true"></span> All Dino's
+                <img src="favicon.png" width="40px" /> All Dino's
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
+
     </nav>
 </div>
 
