Changes to icons in Nav
Added Icons to Nav

--- a/counter/Pages/Dino.razor
+++ b/counter/Pages/Dino.razor
@@ -8,7 +8,7 @@
 
 @if (getDataError || apiData is null)
 {
-    <p>No Dinosaur Details, Yet, Perhaps if you pressed the button ^^^^</p>
+    <p>No Dinosaur Details Yet, Perhaps If You Pressed The Button ^^^^</p>
 }
 else
 {
