--- a/counter/Pages/allDinos.razor
+++ b/counter/Pages/allDinos.razor
@@ -3,7 +3,7 @@
 @using System.Text.Json.Serialization
 @inject IHttpClientFactory ClientFactory
 
-<h1>All the Dino's'</h1>
+<h1>All the Dino's!</h1>
 <button class="btn btn-primary" style="margin-bottom:10px" @onclick="GetApiData">Get ALL DINO'S'</button>
 
 @if (getDataError || apiData is null)
