--- a/counter/Shared/NavMenu.razor
+++ b/counter/Shared/NavMenu.razor
@@ -1,9 +1,7 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         
-
         <a class="navbar-brand" href="">Dino App</a>
-        <img src="favicon.png" width="40px" />
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,17 +12,17 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <img src="favicon.png" width="40px" />Home
+                <img src="favicon.png" style="margin-right:5px" width="40px" />Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="randomDino">
-                <img src="favicon.png" width="40px" /> Random Dino
+                <img src="favicon.png" style="margin-right:5px" width="40px" /> Random Dino
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="allDinos">
-                <img src="favicon.png" width="40px" /> All Dino's
+                <img src="favicon.png" style="margin-right:5px" width="40px" /> All Dino's
             </NavLink>
         </div>
 
