--- a/counter/Pages/Index.razor
+++ b/counter/Pages/Index.razor
@@ -2,9 +2,9 @@
 
 <PageTitle>Dino App</PageTitle>
 
-<h1>Home Page</h1>
+<h1>Home of the Dinos</h1>
 
-<p>Welcome to the page, use the nav to get a random Dinosaur, or view lots of dinosaurs!</p>
-<img src="dino.jpg" width="600px" style="margin-bottom:10px" / alt="Dinosaur Picture from personal photographs">
+<p>Welcome to Dino App, use the nav to get a random Dinosaur, or view lots of dinosaurs!</p>
+<img src="dino.jpg" width="600px" height="auto" style="margin-bottom:10px" alt="Dinosaur Picture from personal photographs">
 <p style="margin:0">(Dinosaur facts taken from Dinosaur API)</p>
 <a href="https://dinosaur-facts-api.shultzlab.com/">https://dinosaur-facts-api.shultzlab.com/</a>
