--- a/counter/Shared/NavMenu.razor
+++ b/counter/Shared/NavMenu.razor
@@ -21,6 +21,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="searchDinos">
+                <img src="favicon.png" style="margin-right:5px" width="40px" /> Search Dino's
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="allDinos">
                 <img src="favicon.png" style="margin-right:5px" width="40px" /> All Dino's
             </NavLink>
