debugged occasional error in search

--- a/counter/Pages/Index.razor
+++ b/counter/Pages/Index.razor
@@ -5,6 +5,6 @@
 <h1>Home of the Dinos</h1>
 
 <p>Welcome to Dino App, use the nav to get a random Dinosaur, or view lots of dinosaurs!</p>
-<img src="dino.jpg" width="600px" height="auto" style="margin-bottom:10px" alt="Dinosaur Picture from personal photographs">
+<img src="dino.jpg" class="oi-image" height="auto" style="width: 100% ; margin-bottom: 10px" alt="Dinosaur Picture from personal photographs">
 <p style="margin:0">(Dinosaur facts taken from Dinosaur API)</p>
 <a href="https://dinosaur-facts-api.shultzlab.com/">https://dinosaur-facts-api.shultzlab.com/</a>
