--- a/counter/Pages/allDinos.razor
+++ b/counter/Pages/allDinos.razor
@@ -4,7 +4,7 @@
 @inject IHttpClientFactory ClientFactory
 
 <h1>All the Dino's!</h1>
-<button class="btn btn-primary" style="margin-bottom:10px" @onclick="GetApiData">Get ALL DINO'S'</button>
+<button class="btn btn-primary" style="margin-bottom:10px" @onclick="GetApiData">GET ALL DINO'S'</button>
 
 @if (getDataError || apiData is null)
 {
