--- a/counter/Shared/MainLayout.razor
+++ b/counter/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>Dino App</PageTitle>
+<PageTitle>Dino App - By Andrew Durnall</PageTitle>
 
 <div class="page">
     <div class="sidebar">
@@ -9,7 +9,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="https://andrewdurnall-7130f.web.app/" target="_blank">Andrew Durnall - Portfolio</a>
         </div>
 
         <article class="content px-4">
